# aptx-wrapper

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  configure.ac  configure~  main.cpp
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
