AC_INIT([aptx], [2.4.5], [kakrefting@gmail.com])
AM_INIT_AUTOMAKE([no-define])

AC_PREREQ([2.69])
AC_CONFIG_SRCDIR([main.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
Makefile
])
